<resources>
    <string name="app_name">Consult Me</string>
    <string name="account">ACCOUNT</string>
    <string name="appointment">APPOINTMENT</string>
    <string name="books">BOOK</string>
    <string name="learn">LEARN</string>
    <string name="visit">VISIT</string>
    <string name="welcome">Welcome</string>
    <string name="share">SHARE</string>
    <string name="enter_residential_area">Enter Residential Area</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="log_in">Log In</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="text1">text1</string>
    <string name="text2">text2</string>
    <string name="text6">text6</string>
    <string name="text5">text5</string>
    <string name="text4">text4</string>
    <string name="text3">text3</string>
    <string name="consult_the_doctor_via">Consult the Doctor:</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="email">EMAIL</string>
    <string name="meeting">MEETING</string>
    <string name="pick_department_to_book_appointment">Pick Department to Book Appointment:</string>
    <string name="radiology">Radiology</string>
    <string name="cardiology">cardiology</string>
    <string name="neurology">neurology</string>
    <string name="gynecology">gynecology</string>
    <string name="maternity">maternity</string>
    <string name="orthopedics">orthopedics</string>
    <string name="book">BOOK</string>
    <string name="these_are_the_available_dates">These are the available dates:</string>
    <string name="tt">Tt</string>
    <string name="ttt">ttt</string>
    <string name="tttt">tttt</string>
    <string name="select">Select</string>
    <string name="btns">Btns</string>
    <string name="learn_about">Learn About:</string>
    <string name="consult">CONSULT</string>
    <string name="cholera">Cholera</string>
    <string name="malaria">Malaria</string>
    <string name="typhoid">Typhoid</string>
    <string name="corona">Corona</string>
    <string name="chickenpox">chickenpox</string>
    <string name="tb">TB</string>
    <string name="common_cold">Common Cold</string>
    <string name="hiv_aids">HIV AIDS</string>
    <string name="arthritis">ARTHRITIS</string>
    <string name="diabetes">DIABETES</string>
    <string name="polio">POLIO</string>
    <string name="measles">MEASLES</string>
    <string name="contact_us">CONTACT US</string>

    <string name="a_response_will_be_sent_to_you_within_24hours">A Response will be Sent to you within 24Hours</string>
    <string name="location">location</string>
    <string name="contact">contact</string>
    <string name="name">name</string>
    <string name="recommend_our_app">Recommend Our App:</string>
    <string name="doctor_app">Doctor App</string>
    <string name="patient_info_required">Patient info required:</string>
    <string name="register">Register</string>
    <string name="please_download_consult_you_app_to_register_a_hospital_or_as_a_doctor">Please Download Consult You App To Register A Hospital or As A Doctor</string>
    <string name="thank_you_for_using_consult_me_app">Thank you for Using Consult Me App</string>
</resources>