<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:textColor="#04FFEA"
        android:gravity="center"
        android:textSize="30sp"
        android:id="@+id/patientInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_info_required"
        tools:ignore="MissingConstraints"/>


    <EditText
        android:id="@+id/mName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_full_name"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/mAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_age"
        android:inputType="number" />

    <EditText
        android:id="@+id/mGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_gender"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/mEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/mPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/mPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_residential_area"
        android:inputType="textPersonName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/mBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="160dp"
            android:layout_marginRight="160dp"
            android:backgroundTint="#F30000"
            android:text="Next"
            android:textColor="#131313"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/docMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Register As Doctor/Health institution:"
        android:textColor="#D904FF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/mBack"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/mDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#80ED01"
            android:text="@string/register"
            android:textColor="#131313"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>