<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/mPicture"
        android:layout_width="match_parent"
        android:layout_height="162dp" />


    <TextView
        android:id="@+id/mNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:gravity="center"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/mHosp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:gravity="center"
        android:textSize="30sp"/>

    <Button
        android:textColor="#0B0A0A"
        android:backgroundTint="#10ECBE"
        android:id="@+id/mCalls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact" />

</LinearLayout>